Initial version of observation path

--- a/dist.ini
+++ b/dist.ini
@@ -35,6 +35,7 @@ aliased 			= 0
 Carp 				= 1.26
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
+Math::MatrixReal                = 2.11
 Moo 				= 0
 OpenGL 				= 0
 Path::Tiny 			= 0.049
