Update dist.ini and .gitignore

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,12 @@ license     = Perl_5
 main_module = lib/Iston/Object.pm
 
 [@Git]
+push_to = origin
+push_to = origin build/master:build/master
+
+[Git::CommitBuild]
+release_branch  = build/%b
+release_message = Release build of v%v (on %b)
 
 [PodWeaver]
 finder = :InstallModules
