Fix dist.ini to include .travis.yml

--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,10 @@ bundle = @Basic
 remove = UploadToCPAN
 remove = Readme
 remove = MakeMaker
+remove = GatherDir
+
+[GatherDir]
+include_dotfiles = 1
 
 [MakeMaker]
 eumm_version = 6.86
