Fix dist.ini to include .travis.yml (attemp #2)

--- a/dist.ini
+++ b/dist.ini
@@ -22,9 +22,13 @@ remove = UploadToCPAN
 remove = Readme
 remove = MakeMaker
 remove = GatherDir
+remove = PruneCruft
 
 [GatherDir]
 include_dotfiles = 1
+
+[PruneCruft]
+except = \.travis.yml
 
 [MakeMaker]
 eumm_version = 6.86
