--- a/dist.ini
+++ b/dist.ini
@@ -54,6 +54,7 @@ Moo 				= 0
 OpenGL 				= 0
 Path::Tiny 			= 0.049
 Smart::Comments 		= 0
+Text::CSV 			= 0
 
 [Prereqs / TestRequires]
 Test::More			= 0.98 
