Use AnyEvent instead of glutMainLoop

--- a/dist.ini
+++ b/dist.ini
@@ -46,6 +46,7 @@ fake_home = 1
 
 [Prereqs]
 aliased 			= 0
+AnyEvent 			= 0
 Carp 				= 1.26
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
