Add main module

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ version     = 0.01
 abstract    = 3D models view/rotation research
 author      = Ivan Baidakou <dmol@gmx.com>,
 license     = Perl_5
-main_module = lib/Iston/Object.pm
+main_module = lib/Iston.pm
 
 [@Git]
 push_to = origin
