--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name        = Iston
-version     = 0.01
+version     = 0.02
 abstract    = 3D models view/rotation research
-author      = Ivan Baidakou <dmol@gmx.com>,
+author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
 main_module = lib/Iston.pm
 
