Update/add win32 builds

--- a/dist.ini
+++ b/dist.ini
@@ -46,10 +46,12 @@ fake_home = 1
 
 [Prereqs]
 aliased 			= 0
+AntTweakBar			= 0
 Alien::SDL 			= 0
-AntTweakBar 			= 0
+Alien::AntTweakBar 			= 0
 AnyEvent 			= 0
 Carp 				= 1.26
+EV					= 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
