--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name        = Iston
-version     = 0.02
+version     = 0.03
 abstract    = 3D models view/rotation research
 author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
@@ -46,14 +46,19 @@ fake_home = 1
 
 [Prereqs]
 aliased 			= 0
+AntTweakBar			= 0
+Alien::SDL 			= 0
+Alien::AntTweakBar 			= 0
 AnyEvent 			= 0
 Carp 				= 1.26
+EV					= 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
 OpenGL 				= 0
 Path::Tiny 			= 0.049
+SDL 				= 0
 Smart::Comments 		= 0
 Text::CSV 			= 0
 
