--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: perl
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - sudo apt-get update
+  - sudo apt-get install libdbus-1-3 libsdl1.2-dev
   - sudo apt-get install freeglut3-dev libxmu-dev
+  - cpanm -v http://cpan.metacpan.org/authors/id/D/DM/DMOL/AntTweakBar-0.01_01.tar.gz
 install: cpanm -v --installdeps --notest .
 perl:
   - "5.18"
