Delete unused display lists

--- a/dist.ini
+++ b/dist.ini
@@ -48,10 +48,11 @@ fake_home = 1
 aliased 			= 0
 AntTweakBar			= 0
 Alien::SDL 			= 0
-Alien::AntTweakBar 			= 0
+Alien::AntTweakBar 		= 0
 AnyEvent 			= 0
 Carp 				= 1.26
-EV					= 0
+EV				= 0
+Guard 				= 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
@@ -59,7 +60,6 @@ Moo 				= 0
 OpenGL 				= 0
 Path::Tiny 			= 0.049
 SDL 				= 0
-Scalar::Util 			= 0
 Smart::Comments 		= 0
 Text::CSV 			= 0
 
