--- a/META.yml
+++ b/META.yml
@@ -27,13 +27,13 @@ requires:
   Carp: '1.26'
   EV: '0'
   Function::Parameters: '1.0201'
+  Guard: '0'
   List::MoreUtils: '0'
   Math::MatrixReal: '2.11'
   Moo: '0'
   OpenGL: '0'
   Path::Tiny: '0.049'
   SDL: '0'
-  Scalar::Util: '0'
   Smart::Comments: '0'
   Text::CSV: '0'
   aliased: '0'
