Build results of 39de1f3 (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,7 @@ abstract    = 3D models view/rotation research
 author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
 main_module = lib/Iston.pm
+copyright_holder = Ivan Baidakou
 
 [@Git]
 push_to = origin
