Initial working version with shaders and textures

--- a/dist.ini
+++ b/dist.ini
@@ -59,6 +59,8 @@ List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
 OpenGL 				= 0
+OpenGL::Shader                  = 0
+OpenGL::Image                   = 0
 Path::Tiny 			= 0.049
 SDL 				= 0
 Smart::Comments 		= 0
