Use File::ShareDir to locate shaders

--- a/dist.ini
+++ b/dist.ini
@@ -54,6 +54,7 @@ AnyEvent 			= 0
 Carp 				= 1.26
 EV				= 0
 Guard 				= 0
+File::ShareDir::ProjectDistDir  = 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
