--- a/dist.ini
+++ b/dist.ini
@@ -54,11 +54,14 @@ AnyEvent 			= 0
 Carp 				= 1.26
 EV				= 0
 Guard 				= 0
+File::ShareDir::ProjectDistDir  = 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
 OpenGL 				= 0
+OpenGL::Shader                  = 0
+OpenGL::Image                   = 0
 Path::Tiny 			= 0.049
 SDL 				= 0
 Smart::Comments 		= 0
