Initial migration from hand-made AE-based event loop to SDLx-Application based. Observer works.

--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,11 @@
 name        = Iston
-version     = 0.07
 abstract    = 3D models view/rotation research
 author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
 main_module = lib/Iston.pm
 copyright_holder = Ivan Baidakou
+
+[VersionFromModule]
 
 [@Git]
 push_to = origin
