Build results of ee692cf (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,11 @@
 name        = Iston
-version     = 0.07
 abstract    = 3D models view/rotation research
 author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
 main_module = lib/Iston.pm
 copyright_holder = Ivan Baidakou
+
+[VersionFromModule]
 
 [@Git]
 push_to = origin
@@ -54,7 +55,6 @@ AnyEvent 			= 0
 Carp 				= 1.26
 EV				= 0
 Guard 				= 0
-File::ShareDir::ProjectDistDir  = 0
 Function::Parameters 		= 1.0201
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
