--- a/dist.ini
+++ b/dist.ini
@@ -57,6 +57,7 @@ EV				= 0
 Guard 				= 0
 File::Find::Rule                = 0
 Function::Parameters 		= 1.0201
+Inline::C                       = 0
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
