Build results of 33c6354 (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -56,6 +56,7 @@ Carp 				= 1.26
 EV				= 0
 Guard 				= 0
 File::Find::Rule                = 0
+File::ShareDir                  = 0
 Function::Parameters 		= 1.0201
 Inline::C                       = 0
 List::MoreUtils 		= 0
