--- a/dist.ini
+++ b/dist.ini
@@ -58,7 +58,7 @@ Guard 				= 0
 File::Find::Rule                = 0
 File::ShareDir                  = 0
 Function::Parameters 		= 1.0201
-Inline::C                       = 0
+Iston::XS                       = 0.01
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
