--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install libdbus-1-3 libsdl1.2-dev
   - sudo apt-get install freeglut3-dev libxmu-dev
+  - cpanm -v https://github.com/basiliscos/iston-xs/archive/master.tar.gz
 install: cpanm -v --installdeps --notest .
 perl:
   - "5.20"
