Build results of dbb974d (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,9 @@ include_dotfiles = 1
 
 [PruneCruft]
 except = \.travis.yml
+except = share/models/.*$
+except = static-build/.*$
+except = .*bat$
 
 [MakeMaker]
 eumm_version = 6.86
