Build results of dbb974d (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,8 @@ remove = GatherDir
 remove = PruneCruft
 
 [GatherDir]
+prune_directory = share/models
+prune_directory = static-build
 include_dotfiles = 1
 
 [PruneCruft]
