--- a/dist.ini
+++ b/dist.ini
@@ -27,15 +27,13 @@ remove = GatherDir
 remove = PruneCruft
 
 [GatherDir]
-prune_directory = share/models
+prune_directory = share\/models
 prune_directory = static-build
+exclude_match = .*\.bat$
 include_dotfiles = 1
 
 [PruneCruft]
 except = \.travis.yml
-except = share/models/.*$
-except = static-build/.*$
-except = .*bat$
 
 [MakeMaker]
 eumm_version = 6.86
