Build results of dbb974d (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -27,7 +27,7 @@ remove = GatherDir
 remove = PruneCruft
 
 [GatherDir]
-prune_directory = share\/models
+prune_directory = models
 prune_directory = static-build
 exclude_match = .*\.bat$
 include_dotfiles = 1
