Exclude models and static-build dirs from distribution

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,9 @@ remove = GatherDir
 remove = PruneCruft
 
 [GatherDir]
+prune_directory = models
+prune_directory = static-build
+exclude_match = .*\.bat$
 include_dotfiles = 1
 
 [PruneCruft]
