--- a/dist.ini
+++ b/dist.ini
@@ -62,6 +62,7 @@ File::Find::Rule                = 0
 File::ShareDir                  = 0
 Function::Parameters 		= 1.0201
 Iston::XS                       = 0.01
+JSON::XS                        = 0
 List::MoreUtils 		= 0
 Math::MatrixReal                = 2.11
 Moo 				= 0
